--- a/beliccia/src/assets/css/variables.css
+++ b/beliccia/src/assets/css/variables.css
@@ -3,7 +3,7 @@
     --secondary-color: #333333;
     --background-color: #fff8e7;
     --accent-color: #b5835a;
-    --font-title: "Uncial Antiqua", serif;
+    --font-title: "Cormorant Garamond", serif;
     --font-body: 'Poppins', sans-serif;
     --shadow-primary: 1px 1px 5px var(--primary-color);
     --shadow-accent: 0 0 10px var(--accent-color);
