--- a/beliccia/src/assets/css/responsive.css
+++ b/beliccia/src/assets/css/responsive.css
@@ -32,3 +32,9 @@
         text-align: center;
     }
 }
+
+@media (max-width: 768px) {
+  #hero video {
+    object-position: center center;
+  }
+}
