--- a/beliccia/src/assets/css/hero.css
+++ b/beliccia/src/assets/css/hero.css
@@ -20,13 +20,13 @@
 }
 
 .hero h1 {
-    font-size: 2.5rem;
-    text-shadow: var(--shadow-primary), var(--shadow-accent), var(--shadow-secondary);
+    font-size: 2.5rem;   
     margin-bottom: 1rem;
+    text-shadow: none !important;
 }
 
 .hero p {
-    text-shadow: var(--shadow-primary), var(--shadow-accent), var(--shadow-secondary);
+    /*text-shadow: var(--shadow-primary), var(--shadow-accent), var(--shadow-secondary);*/
     font-size: 1.2rem;
     margin-bottom: 2rem;
 }
