--- a/beliccia/src/assets/css/variables.css
+++ b/beliccia/src/assets/css/variables.css
@@ -1,12 +1,13 @@
 :root {
-    --primary-color: #d4a373;
+    --primary-color:  #000000;
     --secondary-color: #333333;
-    --background-color: #fff8e7;
-    --accent-color: #b5835a;
+    --background-color: #ffffff;
+    --accent-color: #ffffff;
+    --text-light: #666666
     --font-title: "Cormorant Garamond", serif;
     --font-body: 'Poppins', sans-serif;
-    --shadow-primary: 1px 1px 5px var(--primary-color);
-    --shadow-accent: 0 0 10px var(--accent-color);
-    --shadow-secondary: 0 0 15px var(--secondary-color);
+   --shadow-primary: 0 2px 4px rgba(0, 0, 0, 0.1);
+  --shadow-accent: 0 1px 3px rgba(0, 0, 0, 0.1);
+  --shadow-secondary: 0 1px 2px rgba(0, 0, 0, 0.06);
   }
   
