--- a/beliccia/src/assets/estilos.css
+++ b/beliccia/src/assets/estilos.css
@@ -8,3 +8,5 @@
 @import './css/footer.css';
 @import './css/animations.css';
 @import './css/responsive.css';
+@import './css/cards.css';
+@import './css/modalCard.css';
