--- a/beliccia/src/assets/estilos.css
+++ b/beliccia/src/assets/estilos.css
@@ -3,6 +3,7 @@
 @import './css/header.css';
 @import './css/hero.css';
 @import './css/collections.css';
+@import './css/instagramCarousel.css';
 @import './css/about.css';
 @import './css/services.css';
 @import './css/footer.css';
