--- a/beliccia/src/assets/css/globals.css
+++ b/beliccia/src/assets/css/globals.css
@@ -1,3 +1,4 @@
+/* IMPORTS Y VARIABLES, por defecto mobile first */
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Poppins:wght@300;400;500&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@400;600;700&family=Poppins:wght@300;400;500&display=swap');
 @import url('https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css');
@@ -42,9 +43,35 @@ a:hover {
   background-color: var(--accent-color);
 }
 
-/*
+/* 
 .page-container {
   margin-top: 7rem; 
   padding: 1rem;
 }
 */
+
+/* MEDIA QUERY ESCRITORIO */
+@media (min-width: 768px) {
+  body {
+    font-size: 1.15rem;
+  }
+  h1 {
+    font-size: 3rem;
+  }
+  h2 {
+    font-size: 2.2rem;
+  }
+  .btn {
+    padding: 1rem 2.2rem;
+    font-size: 1.1rem;
+  }
+  .page-container.no-padding {
+  padding-left: 0 !important;
+  padding-right: 0 !important;
+  /* O simplemente: */
+  padding: 0 !important;
+}
+  a {
+    font-size: 1.1rem;
+  }
+}
