--- a/beliccia/src/assets/estilos.css
+++ b/beliccia/src/assets/estilos.css
@@ -11,3 +11,5 @@
 @import './css/responsive.css';
 @import './css/cards.css';
 @import './css/modalCard.css';
+@import './css/instagramFloatingButton.css';
+@import './css/whatsappFloatingButton.css';
