--- a/beliccia/src/assets/css/hero.css
+++ b/beliccia/src/assets/css/hero.css
@@ -55,7 +55,10 @@ html, body {
     max-width: 100vw;
   }
   .hero-content { justify-content: center; padding-bottom: 7rem; }
-  .hero-title { font-size: 4rem; }
+  .hero-title { 
+    font-size: 4rem;
+    margin-top: 40rem;
+   }
   .hero p { font-size: 1.8rem; margin-bottom: 3rem; }
   .hero .btn { margin-bottom: 3rem; font-size: 1.2rem; }
   .hero-desc { font-size: 1.8rem; margin-bottom: 3rem; }
